# stocksage

./: .gitignore  PROJECT_INDEX.json  README.md  docker-compose.dev.yml  pyproject.toml  start.sh  stop.sh
stocksage-api/: alembic.ini  docker-compose.yml  pyproject.toml
stocksage-api/alembic/: env.py
stocksage-api/alembic/versions/: 001_add_enhanced_backtest_fields.py  002_add_screener_strategy_id.py  003_add_screener_v21_fields.py  004_add_analyst_reports.py  005_add_screener_date_market_filters.py
stocksage-api/app/: config.py  deps.py  main.py  middleware.py
stocksage-api/app/auth/: router.py  schemas.py  service.py
stocksage-api/app/backtest/: diagnoser.py  executor.py  router.py  schemas.py  service.py
stocksage-api/app/chat/: agent.py  chat_tools.py  intent.py  router.py  schemas.py  service.py
stocksage-api/app/db/: models.py  session.py
stocksage-api/app/evolution/: applier.py  generator.py  router.py  schemas.py  service.py
stocksage-api/app/indicators/: router.py  schemas.py
stocksage-api/app/marketplace/: router.py  schemas.py  service.py
stocksage-api/app/memory/: __init__.py  extractor.py  forgetting.py  recall.py  router.py  schemas.py  service.py
stocksage-api/app/notification/: email_sender.py  formatter.py
stocksage-api/app/portfolio/: router.py  schemas.py  service.py
stocksage-api/app/reports/: router.py
stocksage-api/app/runs/: buffer.py  control.py  interaction.py  orchestrator.py  progress.py  router.py  schemas.py  (+2 more)
stocksage-api/stocksage_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
stocksage-api/tests/: conftest.py  test_auth.py  test_backtest_evolution.py  test_buffer.py  test_interaction.py  test_marketplace.py  test_memory.py  test_portfolio.py  test_reports.py  test_runs.py  test_screener_v2.py  test_sharing.py  test_skills.py  test_usage.py  test_workflows.py
(+174 files in other folders)
